css/authorizer-login.css
#loginform .button-external {
	font-size: 18px;
	height: 50px;
	margin: 0 0 20px 0;
	padding-top: 7px;
	text-align: center;
	width: 100%;
}
#loginform .button-external .dashicons {
	font-size: 32px;
}
#loginform .button-external .label {
	padding-left: 20px;
}

@media screen and (max-width: 782px) {
	#loginform .button-external {
		padding: 0 14px;
		line-height: 2.7143;
		min-height: 40px;
	}
	#loginform .button-external .dashicons {
		padding-top: 7px;
	}
}

#loginform .button-google {
	background-color: #dd4b39;
	border-bottom: 1px solid #bb3f30;
	border-color: transparent;
	-webkit-border-radius: 3px;
	border-radius: 3px;
	-webkit-box-shadow: 0 1px 0 rgba(0,0,0,0.20);
	box-shadow: 0 1px 0 rgba(0,0,0,0.10);
	height: 50px;
	margin-bottom: 20px;
	text-shadow: none;
	width: 270px;
}
#loginform .button-google:hover {
	background-color: #e74b37;
	border-color: transparent;
	-webkit-box-shadow: inset 0 -2px 0 rgba(0,0,0,.20);
	box-shadow: inset 0 -2px 0 rgba(0,0,0,.20);
}
#loginform .button-google:active {
	background-color: #be3e2e;
	-webkit-box-shadow: inset 0 2px 0 rgba(0,0,0,.20);
	box-shadow: inset 0 2px 0 rgba(0,0,0,.20);
}

#auth-external-service-login h3 {
	margin-bottom: 16px;
	text-align: center;
}

